# mini-qml

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  index.html  mini-qml.html  mini-qml.js  mini-qml.pro  resources.qrc
deploy/: mini-qml.desktop
qml/: item.qml  main.qml
src/: CMakeLists.txt  main.cpp  player.h
